fix: 버전 관련 이슈 해결을 위해 자바 버전을 8로 변경