@@ -6,6 +6,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CrewStore {
     public static final String BACKEND_CREW_DIR = "src/main/resources/backend-crew.md";
@@ -44,6 +45,6 @@ public class CrewStore {
     public List<Crew> findAllByCourse(Course course) {
         return store.stream()
                 .filter(crew -> crew.isCourse(course))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
